--- a/src/styles/key-main-common.scss
+++ b/src/styles/key-main-common.scss
@@ -5,6 +5,7 @@
   right: 0;
   bottom: 0;
 }
+
 .webkit-beauty {
   $webkit-color: #00bb00;
   &::-webkit-scrollbar { // 整个滚动条.
@@ -33,4 +34,8 @@
   }
   &::-webkit-resizer { // 某些元素的corner部分的部分样式(例:textarea的可拖动按钮) . &::-webkit-scrollbar-button {
   }
+}
+
+.km-btn {
+
 }
